@@ -1,3 +1,6 @@
+2007-10-30  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/plugins/Calendar.py: added Peter Landgren's locale suggestions
+
 2007-10-30 Gary Burton <gary.burton@zen.co.uk>
 	* src/gen/lib/person.py: setting the death index wrongly.
 
